[tool.poetry]
name = "dasdo"
version = "0.1.1"
description = ""
authors = ["Hadi Zo <hadi.zolfaghaari@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
python-telegram-bot = "^13.4.1"
Babel = "^2.9.0"
pymongo = "^3.11.3"
sentry-sdk = "^1.0.0"

[tool.poetry.dev-dependencies]
black = "^20.8b1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
dasdo = 'dasdo:main'